# CRSF4G

./: .gitignore  udp_server.py
CRSF4GRX/: CMakeLists.txt  sdkconfig  sdkconfig.old
CRSF4GRX/main/: CMakeLists.txt  main.cpp
CRSF4GTX/: CMakeLists.txt
CRSF4GTX/main/: CMakeLists.txt  CRSF.cpp  CRSF.hpp  Kconfig.projbuild  main.cpp  main.hpp  udp.cpp  udp.hpp  wifi.cpp  wifi.hpp
